--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "gatsby-github-personal-website",
+  "name": "josephchow-dev",
   "private": false,
-  "description": "Repo for github portfolio using gatsby",
-  "homepage": "https://github.com/thakkaryash94/gatsby-github-personal-website",
-  "version": "0.1.0",
-  "author": "Yash Thakkar <thakkaryash94@gmail.com>",
+  "description": "Github portfolio showcase",
+  "homepage": "https://github.com/joefstack/josephchow-dev",
+  "version": "0.2.0",
+  "author": "joefstack",
   "dependencies": {
     "@primer/components": "^13.5.0",
     "@primer/octicons-react": "^9.1.1",
@@ -46,9 +46,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thakkaryash94/gatsby-github-personal-website"
+    "url": "https://github.com/joefstack/josephchow-dev"
   },
   "bugs": {
-    "url": "https://github.com/thakkaryash94/gatsby-github-personal-website/issues"
+    "url": "https://github.com/joefstack/josephchow-dev/issues"
   }
 }
